apps/base/dysautonomia-web/dysautonomia-web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dysautonomia-web
  namespace: default
  labels:
    app: dysautonomia-web
    app.kubernetes.io/name: dysautonomia-web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: dysautonomia-web
  template:
    metadata:
      labels:
        app: dysautonomia-web
        app.kubernetes.io/name: dysautonomia-web
    spec:
      containers:
        - name: dysautonomia-web
          image: ghcr.io/serubin/dysautonomia-lounge-website:2025.12.1
          ports:
            - name: web
              containerPort: 80
