apps/base/dysautonomia-web/dysautonomia-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dysautonomia-web
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: dysautonomia-web
